Hack to use the static registry of ImageIO